gitops/base/network-policies/allow-monitoring-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring-metrics
  namespace: megamart-prod
spec:
  podSelector:
    matchExpressions:
      - {key: app.kubernetes.io/name, operator: In, values: [catalog-service, order-service]}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8000
